Set up and render page locally

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-preset-env": "^1.6.1",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "faker": "^4.1.0",
     "g": "^2.0.1",
     "i": "^0.3.6",
     "jquery": "^3.3.1",
