--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "jquery": "^3.3.1",
     "morgan": "^1.9.0",
     "mysql": "^2.16.0",
+    "newrelic": "^4.8.0",
     "npm": "^6.2.0",
+    "pg": "^7.4.3",
     "popper": "^1.0.1",
     "popper.js": "^1.14.3",
     "react": "^16.4.1",
