--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react": "^16.4.1",
     "react-dom": "^16.2.0",
     "react-grid-system": "^4.1.4",
-    "react-slick": "^0.23.1"
+    "react-slick": "^0.23.1",
+    "siege": "^0.2.0"
   },
   "devDependencies": {
     "axios": "^0.18.0",
