--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^16.2.0",
     "react-grid-system": "^4.1.4",
     "react-slick": "^0.23.1",
+    "redis": "^2.8.0",
     "siege": "^0.2.0"
   },
   "devDependencies": {
